--- a/templates/slates/now.webvfx.html
+++ b/templates/slates/now.webvfx.html
@@ -2,100 +2,109 @@
 	<head>
 		<style type="text/css">
 			body {
-				margin: 0px !important;  height: 1080px; width: 1920px;
-				background-color: #3C1348;
-				padding: 0px;
+				margin: 0;
+				padding: 0;
+				background-color: #0b3865;
+				font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+				-webkit-font-smoothing: antialiased;
 			 }
+
 			.wrapper {
-				background: url(../../res/images/background2.png) no-repeat bottom left;
-				background-size: 1200px;
-				margin: 0px !important;  height: 1080px; width: 1920px;
-				background-color: #3C1348;
+				position: relative;
+				width: 1920px;
+				height: 1080px;
 			}
+
 			#slate {
-				display:  block;
 				position: absolute;
 				left: 620px;
-				top: 80px;	 
+				right: 50px;
+				top: 100px;	 
 			}
+
 			h1, h2 {
-				font-family: Helvetica Neue;
 				color: white;
-				font-weight: 300;
 				width: 1050px;
 				line-height: 1.1;
-				margin-top: 0.2em;
+				margin-top: .2rem;
 				margin-bottom: 0px;
-				font-size: 3em;
+				font-size: 1.3rem;
 			}
-			h2 {
-				font-size: 2em;
-				font-weight: 100;
-				line-height: 1.1;
+
+			.logo {
+				width: 250px;
+				display: block;
+				position: absolute;
+				top: 100px;
+				left: 100px;
+			}		
+
+			.day {
+				color: #3dbb95;
+				text-transform: uppercase;
+				margin: 0;
+				padding: 0;
+				font-size: 3rem;
+				font-family: "NB Grotesk";
 			}
-			.slateText, .hashtag {
-				color: #50e7e8;
-				text-transform: uppercase;			
-				font-family: "NB Grotesk";		
-				font-size: 1.3em;
-			}
-			.hashtag {
-				color: #e55b9a;
-				font-size: 1.3em;
-			}
+			
 			.session  {
 				color: white;
-				font-family: "NB Grotesk";
-				margin-top: 50px;
+				margin-top: 75px;
 				padding-left: 50px;
 				border-left: 1px solid white;
 			}
-			.sessionName h1 {
-				font-size: 3em;
-				display: block;
-				width: 100%;
-			}
-			.logo {
-				width: 300px;
-				display: block;
-				position: absolute;
-				top: 85px;
-				left: 120px;
-			}		
+
 			.sessionTime {
-				font-family: "NB Grotesk";
-				font-size: 1.1em;
-				color: #e65d9b;
+				font-size: 2rem;
+				color: #3dbb95;
 			}
+
 			.sessionName {
+				font-family: "NB Grotesk";
+				text-transform: uppercase;
+				font-size: 3rem;
+				font-weight: bold;
 			}
+			
 			.sessionInfo {
-				font-size: 1.1em;
+				font-size: 2.25rem;
+				font-weight: normal;
 			}
+			
 			.links  {
 				display: block;
 				color: white;
-				font-family: "NB Grotesk";
-				font-size: 1.3em;
+				font-size: 2.5rem;
 				position: absolute;
-				left: 150px;
-				top: 835px;
+				left: 100px;
+				bottom: 100px;
 			}
+			
+			.links .hashtag {
+				color: #3dbb95;
+				text-transform: uppercase;
+				font-family: "NB Grotesk";
+				font-size: 3.5rem;
+			}
+			
 			.links p {
-				line-height: 0.1;
+				line-height: 1;
+				margin: 0;
+				padding: 10px 0 0;
 			}
 		</style>
 		<script src="../../lib/jquery-2.1.3.min.js"></script>
 		<script src="../../lib/TweenMax.min.js"></script>
-			<script type="text/javascript">
+		<script type="text/javascript">
 			function Producer(tl) {
-				this.tl = tl;
+				this.tl=tl;
 			}
-			Producer.prototype.sync = function(time) {
+			Producer.prototype.sync=function(time) {
 				// Use em units which are proportional to font-size,
 				// which is being set to proportional to page render size.
 				// Vary x offset from -0.2 to 0.2.
-				//this.textStyle.textShadow = ((time * 0.4) - 0.2) + "em -0.2em 0.3em black";
+				//this.textStyle.textShadow=((time * 0.4) - 0.2) + "em -0.2em 0.3em black";
 				console.log(time);
 				this.tl.progress(time);
 			}
@@ -103,28 +112,27 @@
 				handleFontSize();
 				if( typeof webvfx !== "undefined" ) {
 					// read parameters supplied by webvfx and update template values
-					$('#sessionName').text(webvfx.getStringParameter("sessionName"));
-					$('#sessionInfo').text(webvfx.getStringParameter("sessionInfo"));
+					for( i=1; i <= 5; i ++ ) {
+						$('#t'+i).text(webvfx.getStringParameter("t"+i));
+						$('#s'+i).text(webvfx.getStringParameter("s"+i));
+						$('#d'+i).text(webvfx.getStringParameter("d"+i));
+					}
+					$('.day').text(webvfx.getStringParameter("day"));
 				}
-				var tl = new TimelineLite();
+				var tl=new TimelineLite();
+				tl
+					.from( ".day", 0.5, { css: { marginLeft: "-=30", autoAlpha:0 },ease: Power4. easeInOut }, "day" )
+					.from( ".session", 0.7, { css: { marginLeft: "-=30", autoAlpha:0 }, ease: Power4. easeInOut  }, "one" )
+					.from( ".links", 0.5, { css: { autoAlpha:0 }, ease: Power4. easeInOut }, "five -=0.5",  "end")
 			
-					tl.from(".wrapper", 2, { css: { }, ease:Power4. easeOut }, "start" )
-					.from( ".session", 0.5, { css: { autoAlpha:0, height:0 },ease: Power4. easeInOut }, "start -=1.5", "day" )
-						
-					.from( "#now", 0.5, { css: { marginLeft: "-=30", autoAlpha:0 },ease: Power4. easeInOut }, "start -=1.5", "day" )
-					.from( "#sessionName", 0.7, { css: { marginTop: "-=30", autoAlpha:0 },ease: Power4. easeInOut }, "start -=1.4", "one")			 
-					.from( "#sessionInfo", 0.7, { css: { marginTop: "-60", autoAlpha:0 },ease: Power4. easeInOut },  "start -=1.3", "two" )
-					.from( ".links", 0.2, { css: {marginLeft: "-10px", autoAlpha:0   }, ease: Power4. easeInout }, "two-=0.8", "end")
-					//adjust the number added to "end" label to increase the time the slate is on the screen.
-					.to( "#now", 0.3, { css: {  autoAlpha: 0},ease: Power4. easeInOut }, "end+=6" )
-					.to( "#sessionName", 0.1, { css: { autoAlpha: 0},ease: Power4. easeInOut }, "end+=6"  )			 
-					.to( "#sessionInfo", 0.1, { css: { autoAlpha: 0 },ease: Power4. easeInOut }, "end+=6" )
-					.to( ".session", 0.1, { css: { autoAlpha:0, height:0 },ease: Power4. easeInOut }, "end+=6" )
-					.to( ".links", 0.1, { css: { marginLeft: "-9000"  }, ease: Power4. easeInout }, "end+=6"  );
+					//reverse
+					.to( ".day", 0.3, { css: { marginLeft: "-=30", autoAlpha:0  },ease: Power4. easeInOut }, "end+=6" )
+					.to( ".session", 0.3, { css: { marginLeft: "-=30", autoAlpha:0 }, ease: Power4. easeInOut  }, "end+=6")
+					.to( ".links", 0.3, { css: { autoAlpha:0 }, ease: Power4. easeInOut }, "end+=6");
 				
 				if( typeof webvfx !== "undefined" ) {
 					tl.pause();  // start paused
-					var producer = new Producer(tl);
+					var producer=new Producer(tl);
 					webvfx.renderRequested.connect(producer, Producer.prototype.sync);
 					webvfx.readyRender(true);
 				}
@@ -132,26 +140,27 @@
 			function handleFontSize() {
 				// Set base font size to 2.4% of window height (as recommended by OFCOM)
 				// All other font sizes to be calculated as multiple in the set (1, inf)
-				document.body.style.fontSize = Math.round( window.innerHeight * 0.024 ) + "px";
+				document.body.style.fontSize=Math.round( window.innerHeight * 0.024 ) + "px";
 			}
 			window.addEventListener("load", onLoad, false);
 		</script>
 	</head>
-<body>
-<div class="wrapper">   
-			<img class = "logo" src="../../res/images/rezzedLogo.png"> 
-	<div id="slate">
-			<h1 class = "slateText" id="now"> NOW: </h1>
-			<div class="session">
-				<h1 id="sessionName"> Guild Wars 2: Heart of Thorns</h1>
-				<h2 id="sessionInfo"> Designers from ArenaNet </h2>
-			</div>		
-	</div>   
-			<div class = "links">
-				<h1 class = "hashtag slateText"> #EGX </h1>
-				<p> www.twitch.tv/egx </p>
-				<p> www.youtube.com/egxtv </p>	  
+	<body>
+		<div class="wrapper">
+			<img class="logo" src="../../images/egx-logo-white.png" />
+			<div id="slate">
+				<p class="day">Now:</p>
+				
+				<div class="session">
+					<h1 class="sessionTime" id="t1"> 00:00 - 00:00 </h1>
+					<h1 class="sessionName" id="s1"> The origins of AcidNerve and the design philosophy of Titan Souls </h1>
+					<h2 class="sessionInfo" id="d1"> Mark Foster and David Fenn from Devolver Digital </h2>  	
+				</div>
 			</div>
-</div> 
-</body>
+			<div class="links">
+				<p class="hashtag">#EGX</p>
+				<p>www.youtube.com/egx</p>
+			</div>
+		</div>
+	</body>
 </html>
