--- a/templates/slates/up_next_and_later.webvfx.html
+++ b/templates/slates/up_next_and_later.webvfx.html
@@ -2,100 +2,114 @@
 	<head>
 		<style type="text/css">
 			body {
-			margin: 0px !important;  height: 100%;
-			}
+				margin: 0;
+				padding: 0;
+				background-color: #0b3865;
+				font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+				-webkit-font-smoothing: antialiased;
+			 }
+
 			.wrapper {
-			background-color: grey;
-			background: url(../../res/images/background) no-repeat  ;
-			background-position: right top;
-			background-size: 1500px;
-			background-color: #360c40;	   
-			line-height: 1.1;
-			height: 100%;
+				position: relative;
+				width: 1920px;
+				height: 1080px;
 			}
+
 			#slate {
-			display: inline-block;
-			margin-top: 200px;
-			margin-left: 415px;		 	
+				position: absolute;
+				left: 620px;
+				right: 50px;
+				top: 100px;	 
 			}
+
 			h1, h2 {
-			font-family: Helvetica Neue;
-			color: white;
-			font-size: 90px;
-			font-weight: 300;
+				color: white;
+				width: 1050px;
+				line-height: 1.1;
+				margin-top: .2rem;
+				margin-bottom: 0px;
+				font-size: 1.3rem;
 			}
-			h2 {
-			font-weight: 100;
-			line-height: 1.1;
-			font-size: 70px;
+
+			.logo {
+				width: 250px;
+				display: block;
+				position: absolute;
+				top: 100px;
+				left: 100px;
+			}		
+
+			.day {
+				color: #3dbb95;
+				text-transform: uppercase;
+				margin: 0;
+				padding: 0;
+				font-size: 3rem;
+				font-family: "NB Grotesk";
 			}
-			.slateText {
-			color: #50e7e8;
-			text-transform: uppercase;			
-			color: #50e7e8;
-			font-family: "NB Grotesk";		
-			font-size: 36px;
+			
+			.day.later
+			{
+				margin-top: 125px;
 			}
-			.laterText {	
-			margin-top: 160px;
-			opacity: 0;
+			
+			.session  {
+				color: white;
+				margin-top: 25px;
+				padding-left: 50px;
+				border-left: 1px solid white;
 			}
-			#time {
-			color: #e65d9b;
-			font-size: 50px;
-			font-family: "NB Grotesk";
-			font-weight: normal;
-			margin-top: 50px;
+
+			.sessionTime {
+				font-size: 2rem;
+				color: #3dbb95;
 			}
-			#sessionName {
-			margin-top: 120px;
+
+			.sessionName {
+				font-family: "NB Grotesk";
+				text-transform: uppercase;
+				font-size: 3rem;
+				font-weight: bold;
 			}
-			.later  {
-			display: inline-block;
-			float: left;
-			color: white;
-			font-family: "NB Grotesk";
-			display: block;
-			line-height: 1.1;	
-			margin-left:50px;
-			width: 700px;
+			
+			.sessionInfo {
+				font-size: 2.25rem;
+				font-weight: normal;
 			}
-			.line {
-		
-			display: inline-block;
-			float: left;
-			padding: 0px;
-			margin-top: 20px;			
+			
+			.links  {
+				display: block;
+				color: white;
+				font-size: 2.5rem;
+				position: absolute;
+				left: 100px;
+				bottom: 100px;
 			}
-			#laterTime {
-			font-size: 40px;
-			margin-right: 90px;
-			color: #e65d9b;
-			margin-top: 20px;
+			
+			.links .hashtag {
+				color: #3dbb95;
+				text-transform: uppercase;
+				font-family: "NB Grotesk";
+				font-size: 3.5rem;
 			}
-			.latersessionName {
-			font-size: 40px;
-			margin-bottom: 0px;
-			}
-			.latersessionInfo {
-			font-size: 30px;
-			margin-top: 0; 		
-			}
-			.latersessionName, .latersessionInfo {
-			width:740px;	
+			
+			.links p {
+				line-height: 1;
+				margin: 0;
+				padding: 10px 0 0;
 			}
 		</style>
 		<script src="../../lib/jquery-2.1.3.min.js"></script>
 		<script src="../../lib/TweenMax.min.js"></script>
 		<script type="text/javascript">
 			function Producer(tl) {
-				this.tl = tl;
+				this.tl=tl;
 			}
-			Producer.prototype.sync = function(time) {
+			Producer.prototype.sync=function(time) {
 				// Use em units which are proportional to font-size,
 				// which is being set to proportional to page render size.
 				// Vary x offset from -0.2 to 0.2.
-				//this.textStyle.textShadow = ((time * 0.4) - 0.2) + "em -0.2em 0.3em black";
+				//this.textStyle.textShadow=((time * 0.4) - 0.2) + "em -0.2em 0.3em black";
 				console.log(time);
 				this.tl.progress(time);
 			}
@@ -103,33 +117,31 @@
 				handleFontSize();
 				if( typeof webvfx !== "undefined" ) {
 					// read parameters supplied by webvfx and update template values
-					$('#sessionName').text(webvfx.getStringParameter("sessionName"));
-					$('#sessionInfo').text(webvfx.getStringParameter("sessionInfo"));
+					for( i=1; i <= 5; i ++ ) {
+						$('#t'+i).text(webvfx.getStringParameter("t"+i));
+						$('#s'+i).text(webvfx.getStringParameter("s"+i));
+						$('#d'+i).text(webvfx.getStringParameter("d"+i));
+					}
+					$('.day').text(webvfx.getStringParameter("day"));
 				}
-				var tl = new TimelineLite();			  
-				var sessionNameName = document.getElementById("sessionName");
-				var devName = document.getElementById("sessionInfo");			
-				tl.from(".wrapper", 2, { css: { width: "0px"}, ease:Power4. easeOut }, "start" )
-					.from( "#next", 0.5, { css: { marginLeft: "-=30", autoAlpha:0 },ease: Power4. easeInOut }, "next" )
-					.from( "#time", 0.5, { css: { marginLeft: "-=30", autoAlpha:0 },ease: Power4. easeInOut }, "next+=0.2", "time" )
-					.from( "#sessionName", 0.7, { css: { marginTop: "-=30", autoAlpha:0 },ease: Power4. easeInOut }, "time -=0.4", "one")
-					.from( "#sessionInfo", 0.7, { css: { marginTop: "-60", autoAlpha:0 },ease: Power4. easeInOut },  "one -=0.5", "info" )
-					.from( ".lateOne", 0.7, { css: { marginLeft: "-=30", autoAlpha:0 }, ease: Power4. easeInOut  }, "info -=0.5", "l1")
-					.from( ".lineOne", 0.5, { css: {marginLeft: "-=30", autoAlpha:0  },  ease: Power4. easeInOut }, "info -=0.5")
-					.from( ".lateTwo", 0.7, { css: { marginLeft: "-=30", autoAlpha:0 }, ease: Power4. easeInOut  }, "l1 -=0.5")
-					.from( ".lineTwo", 0.5, { css: {marginLeft: "-=30", autoAlpha:0  },  ease: Power4. easeInOut }, "l1 -=0.5", "end")  
-					.to( "#next", 0.3, { css: {  autoAlpha:0 },ease: Power4. easeInOut }, "end+=6"  )
-					.to( "#time", 0.2, { css: {autoAlpha:0 },ease: Power4. easeInOut }, "end+=6" )
-					.to( "#sessionName", 0.2, { css: {autoAlpha:0 },ease: Power4. easeInOut }, "end+=6"  )			 
-					.to( "#sessionInfo", 0.2, { css: { autoAlpha:0 },ease: Power4. easeInOut }, "end+=6" )
-					.to( ".lateOne", 0.2, { css: {autoAlpha:0 }, ease: Power4. easeInOut  }, "end+=6" )
-					.to( ".lineOne", 0.2, { css: {autoAlpha:0  },  ease: Power4. easeInOut }, "end+=6" )
-					.to( ".lateTwo", 0.2, { css: {autoAlpha:0 }, ease: Power4. easeInOut  }, "end+=6" )
-					.to( ".lineTwo", 0.2, { css: {autoAlpha:0  },  ease: Power4. easeInOut }, "end+=6", "ending" ) 
-					.to( ".wrapper", 1, { css: { width: "0px"},ease: Power4. easeInOut }, "end+=6" );
+				var tl=new TimelineLite();
+				tl
+					.from( ".day.next", 0.5, { css: { marginLeft: "-=30", autoAlpha:0 },ease: Power4. easeInOut })
+					.from( ".session.next", 0.5, { css: { marginLeft: "-=30", autoAlpha:0 }, ease: Power4. easeInOut  }, "+=0.25")
+					.from( ".day.later", 0.5, { css: { marginLeft: "-=30", autoAlpha:0 }, ease: Power4. easeInOut  }, "+=0.25")
+					.from( ".session.later", 0.5, { css: { marginLeft: "-=30", autoAlpha:0 }, ease: Power4. easeInOut  }, "+=0.25")
+					.from( ".links", 0.5, { css: { autoAlpha:0 }, ease: Power4. easeInOut }, "+=0.25")
+			
+					//reverse
+					.to( ".day.next", 0.3, { css: { marginLeft: "-=30", autoAlpha:0  },ease: Power4. easeInOut }, "end+=6" )
+					.to( ".session.next", 0.3, { css: { marginLeft: "-=30", autoAlpha:0 }, ease: Power4. easeInOut  }, "end+=6")
+					.to( ".day.later", 0.3, { css: { marginLeft: "-=30", autoAlpha:0 }, ease: Power4. easeInOut  }, "end+=6")
+					.to( ".session.later", 0.3, { css: { marginLeft: "-=30", autoAlpha:0 }, ease: Power4. easeInOut  },  "end+=6" )
+					.to( ".links", 0.3, { css: { autoAlpha:0 }, ease: Power4. easeInOut }, "end+=6");
+				
 				if( typeof webvfx !== "undefined" ) {
 					tl.pause();  // start paused
-					var producer = new Producer(tl);
+					var producer=new Producer(tl);
 					webvfx.renderRequested.connect(producer, Producer.prototype.sync);
 					webvfx.readyRender(true);
 				}
@@ -137,35 +149,36 @@
 			function handleFontSize() {
 				// Set base font size to 2.4% of window height (as recommended by OFCOM)
 				// All other font sizes to be calculated as multiple in the set (1, inf)
-				document.body.style.fontSize = Math.round( window.innerHeight * 0.024 ) + "px";
+				document.body.style.fontSize=Math.round( window.innerHeight * 0.024 ) + "px";
 			}
 			window.addEventListener("load", onLoad, false);
 		</script>
-	  </script>
 	</head>
-<body>
-	<div class="wrapper">
-		<div id="slate">
-			<h1 class = "slateText" id="next"> NEXT: </h1>
-				<h1 class = "slateText" id = "time"> 00:00 - 00:00 </h1>
-					<div class="session">
-							<h1 id="sessionName"> Name of Session </h1>
-							<h2 id="sessionInfo"> Developer name  </p>
-					</div>		
-					<h1 class = "slateText laterText"> Later: </h1>
-					<img class = "line lineOne" src="../../res/images/line2.png"> 
-					<div class = "later lateOne">
-					<h1 id = "laterTime"> 00:00 - 00:00 </h1>
-							<h1 class="latersessionName"> Session</h1>
-							<h2 class="latersessionInfo"> Developer</h2>  	
-					</div>
-					<img class = "line lineTwo" src="../../res/images/line2.png"> 
-					<div class = "later lateTwo">			 
-							<h1 id = "laterTime"> 00:00 - 00:00 </h1>
-							<h1 class="latersessionName"> Name of Session</h1>
-							<h2 class="latersessionInfo"> Developer name </h2>  	
-					</div>
-				</div>  
-	 </div>
+	<body>
+		<div class="wrapper">
+			<img class="logo" src="../../images/egx-logo-white.png" />
+			<div id="slate">
+				<p class="day next">Next:</p>
+				
+				<div class="session next">
+					<h1 class="sessionTime" id="t1"> 00:00 - 00:00 </h1>
+					<h1 class="sessionName" id="s1"> The origins of AcidNerve and the design philosophy of Titan Souls </h1>
+					<h2 class="sessionInfo" id="d1"> Mark Foster and David Fenn from Devolver Digital </h2>  	
+				</div>
+
+				<p class="day later">Later:</p>
+				
+				<div class="session later">
+					<h1 class="sessionTime" id="t1"> 00:00 - 00:00 </h1>
+					<h1 class="sessionName" id="s1"> The origins of AcidNerve and the design philosophy of Titan Souls </h1>
+					<h2 class="sessionInfo" id="d1"> Mark Foster and David Fenn from Devolver Digital </h2>  	
+				</div>
+			</div>
+			
+			<div class="links">
+				<p class="hashtag">#EGX</p>
+				<p>www.youtube.com/egx</p>
+			</div>
+		</div>
 	</body>
 </html>
