--- a/templates/egx/overlay-lower-left.webvfx.html
+++ b/templates/egx/overlay-lower-left.webvfx.html
@@ -66,9 +66,9 @@
 				clip-path: polygon(0 0, 0% 100%, 100% 100%);*/
 				bottom: 0;
 				left: 0;
-				background: url('corner.png');
+				background: url('corner-rotated.png');
 				background-size: 100% 100%;
-				transform: scaleX(-1) scaleY(-1);
+				/*transform: scaleX(-1) scaleY(-1);*/
 			}
 
 			#top-right {
